adjusts headings and spacings in table, fixes removeeventlisteners in serach and search seasons

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -18,7 +18,7 @@
   &__head {
     .osg-table__heading {
       vertical-align: top;
-      @extend %osg-heading-4;
+      @extend %osg-text-4;
     }
   }
 
@@ -36,13 +36,11 @@
   &__heading:first-child,
   &__cell:first-child {
     @extend %osg-padding-left-30-breakpoint-medium;
-    @extend %osg-padding-left-75-breakpoint-large;
   }
 
   &__heading:last-child,
   &__cell:last-child {
     @extend %osg-padding-right-30-breakpoint-medium;
-    @extend %osg-padding-right-75-breakpoint-large;
   }
 
   &--left-right {
